--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <a href="./public/best movies senin.html"><h3>Second project</h3></a>
     <img src="./assets/images/second project.png" alt="" width="300" height="300">
     <hr>
-    <a href="/4.3 HTML Porfolio Project/public/about.html">  about me  </a>   
+    <a href="./public/about.html">  about me  </a>   
     <a href="./public/contact.html">  contact me  </a>
     
 </body>
